Improved subnet handling.

--- a/public/backbone/templates/DeviceView.html
+++ b/public/backbone/templates/DeviceView.html
@@ -25,7 +25,7 @@ var title = ( thisdev ? "This computer (" + relname + ")" : relname )
                 <td>MAC</td><td><%= id %></td>
             <tr>
             <tr>
-                <td>IP</td><td><%= ip %></td>
+                <td>IP</td><td><a rel="tooltip" data-original-title="Note: Not necessarily up to date."><%= ip %></a></td>
             <tr>
         </table>
     </div>
