Bugfixes and changes to the UI.

--- a/public/backbone/templates/AlarmView.html
+++ b/public/backbone/templates/AlarmView.html
@@ -1,4 +1,4 @@
-<div class="alert alert-info">
+<div class="alert alert-dark">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
-    <strong><%= device.name %></strong> (<%= device.id %>) at <%= time.h %>:<%= time.m %>
+    <i class="icon-calendar icon-white"></i> <strong><%= device.name %></strong> at <%= time.h %>:<%= time.m %> <small class="muted">(<%= device.id %>)</small>
 </div>
